# um-actually-backend

./: .dockerignore  .gitignore  BACKEND_SETUP.txt  Dockerfile  README.md  config.py  fly.toml  main.py  pyproject.toml  requirements.txt  start_dev_server.sh  start_prod_server.sh  test_transcript.py  test_videos.py
.github/workflows/: deploy.yml
api/routes/: text_analysis.py  transcript.py  video_analysis.py
demo/: text_analysis.txt  youtubeurl.txt
schemas/: text_analysis.py  transcript.py  video_analysis.py
services/: analysis_service.py  openai_service.py  search_service.py
