[project]
name = "um-actually-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Supakarn B",email = "supakarnb@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:run"