[project]
name = "um-actually-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Supakarn B",email = "supakarnb@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-dotenv (==1.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "yt-dlp (==2025.10.14)",
    "openai (>=1.0.0,<2.0.0)",
    "tavily-python (>=0.5.0,<1.0.0)",
    "httpx (>=0.28.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false